--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     </div>
                     <input type="submit" value="Entrar">
                     <button>Esqueci a senha</button>
-                    <a href="esquici.html">
-                        Esqueci a senha <i class="material-icons">mail</i>
+                    <a href="esqueci.html">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
             </div>
