--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <button>Esqueci a senha</button>
-                    <a href="esqueci.html">
-                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    <a href="esqueci.html" class="botao">
+                         Esqueci a  Senha<span class="material-symbols-outlined">mail</span>
                     </a>
                 </form>
             </div>
